--- a/mean-course/package.json
+++ b/mean-course/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser": "~9.1.3",
     "@angular/platform-browser-dynamic": "~9.1.3",
     "@angular/router": "~9.1.3",
+    "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "mongodb": "^3.5.7",
     "mongoose": "^5.9.12",
