--- a/mean-course/package.json
+++ b/mean-course/package.json
@@ -22,10 +22,13 @@
     "@angular/platform-browser": "~9.1.3",
     "@angular/platform-browser-dynamic": "~9.1.3",
     "@angular/router": "~9.1.3",
+    "bcrypt": "^4.0.1",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.5.7",
     "mongoose": "^5.9.12",
+    "mongoose-unique-validator": "^2.0.3",
     "multer": "^1.4.2",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
